2000-04-22  Dan Espen  <dane@mk.telcordia.com>

	* FvwmIdent/FvwmIdent.c (change_window_name):  FvwmIdent sets resource
	name to module alias and resource class to module name.

	* FvwmForm/FvwmForm.c (OpenWindows): FvwmForm sets resource
	name to module alias and resource class to module name.

2000-04-22  Mikhael Goikhman  <migo@homemail.com>

	* FvwmWharf/FvwmWharf.c (swallow): removed sleep(60)
	* FvwmWharf/FvwmWharf.1: improved Swallow/MaxSwallow description

2000-04-22  Dan Espen  <dane@mk.telcordia.com>

	* FvwmWinList/FvwmWinList.c: Another I18N patch.

2000-04-20  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Instruction.c (*LaunchScript, Exec):
	Replace some int by unsigned long for OSF1 V4.O alpha and al.
	
2000-04-20  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/ScriptFvwmSetup95.in:
	* FvwmScript/Scripts/script-fvwm-sample95.pl:
	Added a CDE support and a new FAST/SLOW X server option for 
	the Sample-95 installation

	* FvwmScript/Scripts/ScriptFvwmBrowser
	Some fixes, need more work.
	
2000-04-19  Hippo

	* FvwmIconMan/xmanager.c: fixed disappearing title button (todo 109)

2000-04-18  Mikhael Goikhman  <migo@homemail.com>

	* FvwmM4/FvwmM4.c (main):
	* FvwmCpp/FvwmCpp.c (main):
	add "-I FVWM_CONFIGDIR" to preprocessors

2000-04-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmAuto/FvwmAuto.c (main):
	tried to fix bug #550

2000-04-18  Hippo

	* FvwmPager/x_pager.c: fixed desk sep colorset updates, improved
	transparency support for mini-windows. (todo 108)

2000-04-17  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/Widget/PopupMenu.c (EvtMousePopupMenu)
	Fixed ChangeTitle for PopupMenu

2000-04-16  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/ScriptFvwmSetup95.in:
	replaced /usr/bin/dt/dtfile by /usr/dt/bin/dtfile

2000-04-16  Dan Espen  <dane@mk.telcordia.com>

	* FvwmScript/Scripts/ScriptFvwmSetup95.in: Some adjustments.

2000-04-16  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/ScriptFvwmSetup95.in: