@@ -1,3 +1,8 @@
+2000-04-23  Mikhael Goikhman  <migo@homemail.com>
+
+	* FvwmIdent/FvwmIdent.c (list_end): don't exit on button or key
+	release without an actual press first
+
 2000-04-22  Dan Espen  <dane@mk.telcordia.com>
 
 	* FvwmIdent/FvwmIdent.c (change_window_name):  FvwmIdent sets resource
